--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "boxicons": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
